// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should match snapshot 1`] = `
<scale-divider>
  <mock:shadow-root>
    <div aria-hidden="" class="divider" part="base">
      <hr class="divider__horizontal" part="rule-horizontal">
    </div>
  </mock:shadow-root>
</scale-divider>
`;

exports[`Divider should match snapshot when horizontal false 1`] = `
<scale-divider vertical="true">
  <mock:shadow-root>
    <div aria-hidden="" class="divider divider--vertical" part="base vertical">
      <span class="divider__vertical" part="rule-vertical"></span>
    </div>
  </mock:shadow-root>
</scale-divider>
`;
